--- a/companion/src/modeledit/heli.ui
+++ b/companion/src/modeledit/heli.ui
@@ -6,51 +6,88 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>795</width>
-    <height>307</height>
+    <width>566</width>
+    <height>143</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string/>
   </property>
-  <layout class="QGridLayout" name="gridLayout" columnstretch="0,1" columnminimumwidth="100,0">
+  <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0,1">
    <property name="horizontalSpacing">
     <number>6</number>
    </property>
-   <item row="3" column="1">
-    <layout class="QGridLayout" name="gridLayout_21">
-     <item row="0" column="0">
-      <widget class="QCheckBox" name="swashInvertELE">
-       <property name="text">
-        <string>Invert Elevator</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QCheckBox" name="swashInvertAIL">
-       <property name="text">
-        <string>Invert Aileron</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QCheckBox" name="swashInvertCOL">
-       <property name="text">
-        <string>Invert Collective</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+   <item row="1" column="1">
+    <widget class="QComboBox" name="swashCollectiveCB">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
    </item>
-   <item row="3" column="0">
-    <widget class="QLabel" name="label_108">
+   <item row="1" column="0">
+    <widget class="QLabel" name="label_106">
      <property name="text">
-      <string>Invert</string>
+      <string>Collective</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="label_107">
+     <property name="text">
+      <string>Swash Ring</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <spacer name="verticalSpacer_21">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="2" column="1">
+    <widget class="QSpinBox" name="swashRingValSB">
+     <property name="suffix">
+      <string/>
+     </property>
+     <property name="minimum">
+      <number>0</number>
+     </property>
+     <property name="maximum">
+      <number>100</number>
+     </property>
+     <property name="singleStep">
+      <number>1</number>
+     </property>
+     <property name="value">
+      <number>0</number>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="label_103">
+     <property name="text">
+      <string>Swash Type</string>
      </property>
     </widget>
    </item>
    <item row="0" column="1">
     <widget class="QComboBox" name="swashTypeCB">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <item>
       <property name="text">
        <string>Off</string>
@@ -78,61 +115,63 @@
      </item>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="label_106">
+   <item row="3" column="0">
+    <widget class="QLabel" name="label_108">
      <property name="text">
-      <string>Collective</string>
+      <string>Invert</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QComboBox" name="swashCollectiveCB"/>
-   </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="label_103">
-     <property name="text">
-      <string>Swash Type</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
-    <widget class="QSpinBox" name="swashRingValSB">
-     <property name="suffix">
-      <string/>
-     </property>
-     <property name="minimum">
-      <number>0</number>
-     </property>
-     <property name="maximum">
-      <number>100</number>
-     </property>
-     <property name="singleStep">
-      <number>1</number>
-     </property>
-     <property name="value">
-      <number>0</number>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0">
-    <widget class="QLabel" name="label_107">
-     <property name="text">
-      <string>Swash Ring</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="1">
-    <spacer name="verticalSpacer_21">
+   <item row="0" column="3" rowspan="4">
+    <spacer name="horizontalSpacer">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Horizontal</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>20</width>
-       <height>40</height>
+       <width>40</width>
+       <height>20</height>
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="0" column="2" rowspan="3">
+    <spacer name="horizontalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="3" column="1" colspan="2">
+    <layout class="QGridLayout" name="gridLayout_21">
+     <item row="0" column="0">
+      <widget class="QCheckBox" name="swashInvertELE">
+       <property name="text">
+        <string>Invert Elevator</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QCheckBox" name="swashInvertAIL">
+       <property name="text">
+        <string>Invert Aileron</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QCheckBox" name="swashInvertCOL">
+       <property name="text">
+        <string>Invert Collective</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
